Minor fixes and formatting changes in mobile so text aligns left

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,9 @@
     height: 100%;
     float: left;
   }
+  #text-area {
+    margin: 10%;
+  }
 
   .sectionTitle {
     display: flex;
@@ -41,6 +44,14 @@
     justify-content: center;
     font-size: 4.8rem;
     line-height: 1.1;
+  }
+  #scroll-container {
+    overflow: scroll;
+    height: 100vh;
+    scroll-snap-points-y: repeat(100vh);
+    scroll-snap-type: y mandatory;
+    overflow-x: hidden;
+    overflow-x: clip !important;
   }
   .scroller {
     scroll-snap-align: start;
@@ -97,7 +108,7 @@
   font-size: large;
   color: var(--med-light);
   background-color: transparent;
-  margin: 10%;
   display: flex;
   text-wrap: wrap;
+  overflow-y: scroll;
 }
