--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,3 +1,15 @@
+@media (min-width: 481px) {
+  #section-container {
+    padding: 5%;
+  }
+}
+
+@media (max-width: 480px) {
+  .about-overview {
+    text-align: left;
+  }
+}
+
 #mypic {
   display: flex;
   justify-content: center;
@@ -13,6 +25,7 @@
   object-fit: contain;
 }
 
-#section-container {
-  padding: 5%;
+.about-overview {
+  display: inline-block;
+  height: fit-content;
 }
