--- a/src/components/Projects/ProjectCards/card.css
+++ b/src/components/Projects/ProjectCards/card.css
@@ -19,6 +19,7 @@
     padding: 1rem;
     display: flex;
     align-items: center;
+    justify-content: center;
   }
 }
 
@@ -40,11 +41,12 @@
   }
 
   #card-h1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     padding: 0.5rem;
     display: flex;
     align-items: center;
-    word-break: break-all;
+    word-break: break;
+    justify-content: center;
   }
 }
 
